# FPGAPart

./: README.md  run_tpart.sh
FPGAPart/: CMakeLists.txt
FPGAPart/include/par/: MakePartitionMgr.h  PartitionMgr.h
FPGAPart/src/: Coarsener.cpp  Coarsener.h  Evaluator.cpp  Evaluator.h  GreedyRefine.cpp  GreedyRefine.h  Hypergraph.cpp  Hypergraph.h  ILPRefine.cpp  ILPRefine.h  KWayFMRefine.cpp  KWayFMRefine.h  KWayPMRefine.cpp  KWayPMRefine.h  MakePartitionMgr.cpp  Multilevel.cpp  Multilevel.h  PartitionMgr.cpp  Partitioner.cpp  Partitioner.h  PriorityQueue.cpp  PriorityQueue.h  Refiner.cpp  Refiner.h  TritonPart.cpp  TritonPart.h  Utilities.cpp  Utilities.h  partitionmgr-py.i  partitionmgr.i  partitionmgr.tcl
additional_results_rebuttal/: Best_results_comparisons.xlsx  Fixed_die_results.xlsx  Partitioner_runtime_comparisons.xlsx  VTR_runtime_comparisons.xlsx  results.xlsx
run_scripts/default_universe/: run_failure_study.sh  run_koios_designs.sh  run_seed_noise.sh
run_scripts/fpgapart_universe/: run_failure_study.sh  run_koios_designs.sh  run_seed_noise.sh
vtr_7_0/SRC/: main.c
vtr_7_0/SRC/base/: OptionTokens.c  OptionTokens.h  ReadOptions.c  ReadOptions.h  SetupVPR.c  globals.c  globals.h  read_blif.c  read_netlist.c
vtr_7_0/SRC/pack/: cluster.c  prepack.c
vtr_7_0/SRC/timing/: path_delay.c  path_delay.h
